# calimero_x_icp

./: .gitignore  Makefile  README.md  calimero_pow_icp.md
.vercel/: project.json
basic_setup/: continue:node_setup.sh  dfx.json  start.sh
basic_setup/context/: Cargo.toml  build.sh
basic_setup/context/key_value_store(context)/res/: kv_store.wasm
basic_setup/context/key_value_store(context)/src/: lib.rs
basic_setup/context/key_value_store/res/: kv_store.wasm
basic_setup/context/mining_pool/: Cargo.toml
basic_setup/context/mining_pool/res/: mining_pool.wasm
basic_setup/context/res/: kv_store.wasm
basic_setup/external_contract/res/: external_contract.wasm
basic_setup/letter-exchange-app/test_app/: Cargo.toml  build.sh
basic_setup/letter-exchange-app/test_app/res/: test_app.wasm
basic_setup/letter-exchange-app/test_app/src/: lib.rs
basic_setup/proxy_contract/res/: proxy_contract.wasm
docs/: README.md  calimero.md  calimero_config.md  calimero_pow_icp.md  embeddings_and_full_agents.md  icp-devnet.md
docs/meroctl/: commands.md
docs/pm/: core_vs_integration.md  integration_developer_plan.md
exp/hello-app/: README.md
exp/mining_pool/src/: lib_old_ver.rs
scripts/: context-identities.py
src/backend/res/: hello_app.wasm
src/chat/src/: lib.rs
src/frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/frontend/src/: App.tsx
src/logic/easy-file-exchange-app/: Cargo.toml
src/miner_app/: Cargo.toml  miner.rs
src/miner_app/src/: block.rs  main.rs  miner.rs  notes.md  transaction.rs
src/mining/: Cargo.toml  build.sh  context.sh
src/mining/basic_setup/context/: Cargo.toml
src/mining/basic_setup/context/miner/res/: miner.wasm
src/mining/res/: mining.wasm
src/mining/src/: block.rs  blockchain.json  data.txt  main.rs  miner.rs  transaction.rs
tools/: deploy_devnet.sh  deploy_devnet_addon.sh  deploy_devnet_fresh.sh  init_and_run_nodes.sh  setup_calimero_icp.sh
tools/embeddings_generator/: generator.py
(+13 files in other folders)
