[package]
edition = "2021"
name = "mining"
version = "0.1.0"

[dependencies]
calimero-sdk = {git = "https://github.com/calimero-network/core"} 
calimero-storage = {git = "https://github.com/calimero-network/core"} 
hex = "0.4" # Add the hex crate for encoding
serde = {version = "1.0", features = ["derive"]} 
serde_json = "1.0" 
sha2 = "0.10" # Add the sha2 crate for hashing

[profile.app-release]
inherits = "release" # Inherit settings from the default release profile
opt-level = 3 # Optimization level for release builds
