[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "0.10.3", features = ["std"] }
borsh-derive = "0.10.3"
lazy_static = "1.4.0"
calimero-sdk = { git = "https://github.com/calimero-network/core" }
calimero-storage = { git = "https://github.com/calimero-network/core" }

[lib]
crate-type = ["cdylib"]
